RESOLVED FIXED281965
Compilation error in WebDateTimeChooser.h due to missing header
https://bugs.webkit.org/show_bug.cgi?id=281965
Summary Compilation error in WebDateTimeChooser.h due to missing header
Jean-Yves Avenard [:jya]
Reported 2024-10-23 04:36:54 PDT
CheckedRef.h include is missing causing errors.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-23 04:37:18 PDT
Jean-Yves Avenard [:jya]
Comment 2 2024-10-23 04:38:31 PDT
EWS
Comment 3 2024-10-23 05:34:25 PDT
Committed 285596@main (d232aec28bd7): <https://commits.webkit.org/285596@main> Reviewed commits have been landed. Closing PR #35619 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.