Compilation error in WebDateTimeChooser.h due to missing header https://bugs.webkit.org/show_bug.cgi?id=281965 rdar://138471647

Unreviewed build fix following 284733@main

* Source/WebKit/WebProcess/WebCoreSupport/WebDateTimeChooser.h:

Canonical link: https://commits.webkit.org/285596@main