Source/WebKit/WebProcess/WebCoreSupport/WebDateTimeChooser.h
@@ -28,6 +28,7 @@
 #if ENABLE(DATE_AND_TIME_INPUT_TYPES)
 
 #include <WebCore/DateTimeChooser.h>
+#include <wtf/CheckedRef.h>
 #include <wtf/RefCounted.h>
 #include <wtf/WeakRef.h>
 
